--- a/16types.html
+++ b/16types.html
@@ -377,10 +377,11 @@
                     margin-right: auto;
                     text-align: left;
                     text-align: center;">
-          <a href="home.html" style="color: #ffffff; text-decoration: none;">Back</a></button>
+          <a href="sampleHOME.html" style="color: #ffffff; text-decoration: none;">Back</a></button>
     <br>
     
 
     
 </body>
+
 </html>
