--- a/profilepage.html
+++ b/profilepage.html
@@ -63,7 +63,7 @@
 
       <div style="margin:20px 0; display:flex; gap:15px;">
         <a href="https://t.me/ifion_pro" target="_blank" style="display:inline-flex; align-items:center; justify-content:center; width:26px; height:26px; background:white; border-radius:50%; box-shadow:0 2px 5px rgba(0,0,0,0.2);">
-          <img src="pt/telegram.png" width="25" height="25" alt="Telegram">
+          <img src="pt/Telegram.png" width="25" height="25" alt="Telegram">
         </a>
         <a href="https://www.facebook.com/ifionna" target="_blank" style="display:inline-flex; align-items:center; justify-content:center; width:25px; height:25px; background:white; border-radius:50%; box-shadow:0 2px 5px rgba(0,0,0,0.2);">
           <img src="pt/facebook-png-icon-follow-us-facebook-1.png" width="25" height="25" alt="Facebook">
@@ -89,3 +89,4 @@
 
 </body>
 </html>
+
