--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
     </div>
     </a>
 
-    <a href="Lab2LoginFormCalvo.html">
+    <a href="index.html">
     <div style="display: inline-block; margin: 10px; 
             background: linear-gradient(to right, rgb(13, 63, 99), rgb(0, 71, 107)); 
             padding: 20px; 
@@ -245,4 +245,5 @@
 
     
 </body>
+
 </html>
